# ai-system-data-to-decision

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
data/samples/: sample.csv  sample.xlsx
docs/: 00-index.md
docs/architecture/: 01-system-snapshot.md  02-db-persistence-and-dedupe.md  03-transform-layer.md  04-monthly-metrics.md  05-dashboard-v1.md  06-reliability-run-tracking.md  07-silver-layer-clean-records.md
docs/assets/week-07/: flags_report.csv
docs/assets/week-09/: README.md
docs/changelog/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md
docs/decisions/: 0001-uv-and-pyproject.md  0002-db-port-55432.md  0003-secrets-and-env-substitution.md  0004-db-readiness.md  0005-raw-ingestion-first.md  0006-cleaning-and-normalization.md  0007-db-persistence-migrations-upsert.md  0008-transform-layer-monthly-metrics.md  0009-dashboard-v1-summary-tables.md  0010-exceptions-flags-v1.md  0011-reliability-run-tracking.md  0012-silver-layer-and-metrics-refresh.md  0013-demo-golden-path.md
docs/runbooks/: database.md  demo.md  local-dev.md  migrations.md  troubleshooting.md
src/app/: main.py
src/app/api/: __init__.py  dashboard.py  ingest.py
src/app/cleaning/: __init__.py  __main__.py  pipeline.py  rules.py  service.py
tests/: test_cleaning_rules.py  test_demo_path_integration.py  test_demo_runner_unit.py  test_flags_week07.py  test_health.py  test_ingest.py  test_pipeline_runs_integration.py  test_run_tracking_unit.py
(+32 files in other folders)
