[project]
name = "ai-system-data-to-decision"
version = "0.1.0"
description = "Flagship Applied AI Systems portfolio: data-to-decision pipeline + APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "setuptools>=70",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1",
]

[dependency-groups]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
